# stereo-vision

./: .gitignore  CMakeLists.txt  README.MD  README.md  connect.sh  index.html
.github/workflows/: gh-pages.yml
app/: CMakeLists.txt
app/app/: SFM.xml.template
app/conf/: sceneFlow.ini  stereoCalib.ini  stereoDisparity.ini
app/scripts/: SFM.xml  SFM.xml.template  SFM_APP.xml.template  scene_segmentator.xml.template  stereoCalib.xml.template  stereoDisparity.xml.template  stereoDisparitySim.xml.template  stereoDisparity_withRectification.xml  testWorldImage.xml  visuoMotorDisparity.xml.template
app/stereoVision/conf/: stereoDisparity.ini
app/stereoVision/scripts/: stereoCalib.xml.template  stereoDisparity.xml.template  testWorldImage.xml
cmake/: FindSIFTGPU.cmake
doxygen/: generate.txt
doxygen/doc/html/: DispModule_2fastBilateral_8hpp_source.html  DispModule_8cpp_source.html  DispModule_8h_source.html  DisparityModule_2fastBilateral_8hpp_source.html  PointCloudConverter_8cpp_source.html  RGBD2PointCloud_8cpp_source.html  RGBD2PointCloud_8hpp_source.html  Readme_8md_source.html  SFM_2fastBilateral_8hpp_source.html  SFM_8cpp_source.html  SFM_8h_source.html  StereoMatcher_8cpp_source.html  StereoMatcher_8h_source.html  annotated.html  camera_8cpp_source.html  camera_8h_source.html  classCamera.html  classDisparityThread.html  classOpticalFlowThread.html  classSceneFlow.html  classStereoCamera.html  classes.html  cvgui_8cpp_source.html  cvgui_8h_source.html  cvui_8h_source.html  descriptor_8cpp_source.html  descriptor_8h_source.html  dir_05906369c2d654c318c8e5f0b9121080.html  dir_2481df9a5c1a14848b8c9eef78eab02b.html  dir_50bad1a883b2386a62f50ea4f4f2f861.html  dir_5336be9a968f5deed67d991834f2b1b1.html  dir_55c29cd7d44d694181033bb3b5d5be61.html  dir_5a30104352ef4255dc24354b02eb2d20.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_a065c5f60305fee3569f887679366939.html  dir_a519eb04dee9f3b54e796448c67fbe9a.html  dir_abac25be6e9586a73e0319a6df944064.html  dir_cf4e0ef4a778869333c84f28e066307b.html  dir_dde556652f18110d5b294adf514896ce.html  dir_de55ad8dc736256e190fae8ca314121e.html  (+67 more)
doxygen/doc/latex/: annotated.tex  classCamera.tex  classDisparityThread.tex  classOpticalFlowThread.tex  classSceneFlow.tex  classStereoCamera.tex  dir_05906369c2d654c318c8e5f0b9121080.tex  dir_2481df9a5c1a14848b8c9eef78eab02b.tex  dir_50bad1a883b2386a62f50ea4f4f2f861.tex  dir_5336be9a968f5deed67d991834f2b1b1.tex  dir_55c29cd7d44d694181033bb3b5d5be61.tex  dir_5a30104352ef4255dc24354b02eb2d20.tex  dir_97aefd0d527b934f1d99a682da8fe6a9.tex  dir_a065c5f60305fee3569f887679366939.tex  dir_a519eb04dee9f3b54e796448c67fbe9a.tex  dir_abac25be6e9586a73e0319a6df944064.tex  dir_cf4e0ef4a778869333c84f28e066307b.tex  dir_dde556652f18110d5b294adf514896ce.tex  dir_de55ad8dc736256e190fae8ca314121e.tex  dir_e05d7e2b1ecd646af5bb94391405f3b5.tex  group__SFM.tex  make.bat  (+15 more)
fastBilateral/: README.md
lib/: CMakeLists.txt
lib/elas/include/: elas.h
lib/elas/src/: elas_omp.cpp  filter.cpp  matrix.cpp
lib/include/iCub/stereoVision/: camera.h  disparityThread.h  elasWrapper.h  opticalFlowThread.h  sceneFlow.h  stereoCamera.h  utils.h
lib/include/iCub/stereoVision/elas/: LIBELAS-README.txt  README.md  descriptor.h  elas.h  matrix.h  timer.h
lib/include/iCub/stereoVision/sgbm_cuda/: CMakeLists.txt  common.h
lib/src/: camera.cpp  disparityThread.cpp  elasWrapper.cpp  opticalFlowThread.cpp  sceneFlow.cpp  stereoCamera.cpp  utils.cpp
lib/src/elas/: elas.cpp  elas_omp.cpp  filter.cpp
modules/: CMakeLists.txt
modules/DispModule/: CMakeLists.txt  DispModule.cpp  DispModule.h  StereoMatcher.cpp  StereoMatcher.h  cvgui.cpp  cvgui.h  gui.cpp  gui.h
modules/DispModule/sgbm_cuda/: CMakeLists.txt  aggregation.cu  bova_sgm.cu  common.h  main.cpp
modules/DispModule/thrift/: DispModule_IDL.thrift
modules/DisparityModule/: CMakeLists.txt  DispModule.cpp  StereoMatcher.cpp  cvui.h  sgbm_cuda_header.h
modules/DisparityModule/sgbm_cuda/: CMakeLists.txt  bova_sgm.cu  costs.cu
modules/SFM/: CMakeLists.txt  SFM.cpp  SFM.h  SFM_module.cpp  SFM_module.h
modules/SFM/include/: SFM.h  eyesCalibration.h
modules/SFM/src/: SFM.cpp  eyesCalibration.cpp
modules/SFMfilt/: CMakeLists.txt  SFMfilt.cpp  SFMfilt.h
modules/pointCloudConversion/: CMakeLists.txt  PointCloudConverter.cpp  RGBD2PointCloud.cpp  RGBD2PointCloud.hpp  Readme.md  idl.thrift
modules/sceneFlow/: CMakeLists.txt  sceneFlowModule.cpp  sceneFlowModule.h
modules/stereoDisparity/: CMakeLists.txt  disparityModule.cpp  disparityModule.h  disparityThread.cpp  disparityThread.h  main.cpp
modules/testWorldImage/: CMakeLists.txt  testWorldImage.cpp
msgs/: CMakeLists.txt  sensor_msgs_PointCloud2.h  sensor_msgs_PointField.h  std_msgs_Header.h
msgs/sensor_msgs/: PointCloud2.msg  PointField.msg
src/: CMakeLists.txt
src/auxiliaryFunctions/: Camera.cpp  Camera.h  Cvtools.cpp  Cvtools.h  levmar.h  stereoCamera.cpp  stereoCamera.h
src/lib/: CMakeLists.txt
src/lib/include/iCub/stereoVision/: camera.h  cvtools.h  disparityThread.h  opticalFlowThread.h  sceneFlow.h  stereoCamera.h  stereocamera.h  utils.h
src/lib/src/: camera.cpp  cvtools.cpp  disparityThread.cpp  opticalFlowThread.cpp  sceneFlow.cpp  stereoCamera.cpp  stereocamera.cpp  utils.cpp
src/modules/: CMakeLists.txt
src/modules/SFM/: CMakeLists.txt  SFM_module.cpp  SFM_module.h  utils.cpp  utils.h
src/modules/sceneFlow/: CMakeLists.txt  sceneFlowModule.cpp  sceneFlowModule.h
src/modules/stereoCalib/: CMakeLists.txt  main.cpp  stereoCalibModule.cpp  stereoCalibModule.h  stereoCalibThread.cpp  stereoCalibThread.h
src/modules/stereoDisparity/: CMakeLists.txt  disparityModule.cpp  disparityModule.h  disparityThread.cpp  disparityThread.h  main.cpp
src/modules/testWorldImage/: CMakeLists.txt  testWorldImage.cpp  testWorldImage.h
src/stereoCalib/: CMakeLists.txt  main.cpp  stereoCalibModule.cpp  stereoCalibModule.h  stereoCalibThread.cpp  stereoCalibThread.h
src/stereoDisparity/: CMakeLists.txt  disparityModule.cpp  disparityModule.h  disparityThread.cpp  disparityThread.h  main.cpp
(+41 files in other folders)
